--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2301,7 +2301,7 @@ pre code {
     .col-sm-7,
     .col-sm-8,
     .col-sm-9 {
-        float: left
+        float: left;
     }
     .col-sm-12 {
         width: 100%
