--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1785,7 +1785,7 @@ a.bg-danger:hover {
 ol,
 ul {
     margin-top: 0;
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
 
 ol ol,
@@ -5189,7 +5189,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-brand {
     float: left;
     height: 50px;
-    padding: 15px 15px;
+    padding: 150px 15px;
     font-size: 18px;
     line-height: 20px
 }
@@ -6577,7 +6577,7 @@ button.list-group-item-danger.active:hover {
 }
 
 .panel-body {
-    padding: 15px
+    padding: 5px
 }
 
 .panel-heading {
