--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ a:hover {
 }
 
 .bloc-sm {
-    padding: 20px 50px;
+    padding: 0;
+    
 }
 
 .bg-center,
@@ -189,7 +190,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .5);display: flex;justify-content:center;
 }
 
 .d-bloc .panel button:hover,
@@ -288,11 +289,11 @@ a:hover {
 
 .navbar-brand {
     height: auto;
-    padding: 3px 15px;
+    padding: 0 15px;
     font-size: 25px;
     font-weight: normal;
     font-weight: 600;
-    line-height: 44px;
+    line-height: 0px;
 }
 .citation{
     font-size: 1.1em;
@@ -315,14 +316,14 @@ a:hover {
 }
 
 .navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
-    float: right;
+    
+    
     z-index: 1;
 }
 
 .nav > li {
     float: left;
+    list-style: none;
     margin-top: 4px;
     font-size: 16px;
 }
@@ -364,6 +365,41 @@ a:hover {
 #form_1{
     text-align: center;
 }
+
+.adresse{
+    text-align: center;
+}
+
+.site-navigation{
+    align-items: center;
+}
+
+.entete{
+    display: flex;
+    align-items: center;
+    height: 90px;
+    justify-content: center;
+}
+.menu{
+    width: 20px;
+    text-align:center;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.menu a{
+    text-decoration: none;
+}
+
+.menu a:hover{
+    text-decoration: underline;
+    
+}
+
+.logo{
+    margin: 15px 10px;
+}
+
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
@@ -763,7 +799,6 @@ h4 {
 
 .black-background {
     background-color: #6A0002;
-    opacity: 0.9;
     padding: 40px 40px 40px 40px;
 }
 
@@ -919,7 +954,7 @@ h4 {
         float: none!important;
     }
     .navbar.row {
-        margin-left: 0;
+        margin-left: 0;height: 150px!important;
         margin-right: 0;
     }
     .site-navigation {
