--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1785,7 +1785,7 @@ a.bg-danger:hover {
 ol,
 ul {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 10px
 }
 
 ol ol,
@@ -5097,7 +5097,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 
 @media (min-width:768px) {
     .navbar-collapse {
-        width: 30%;
+        width: auto;
         border-top: 0;
         -webkit-box-shadow: none;
         box-shadow: none
@@ -5189,7 +5189,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-brand {
     float: left;
     height: 50px;
-    padding: 150px 15px;
+    padding: 15px 15px;
     font-size: 18px;
     line-height: 20px
 }
@@ -6577,7 +6577,7 @@ button.list-group-item-danger.active:hover {
 }
 
 .panel-body {
-    padding: 5px
+    padding: 15px
 }
 
 .panel-heading {
@@ -7682,7 +7682,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000;
+    background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
