--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5081,15 +5081,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     }
 }
 
-.navbar-collapse {
-    padding-right: 15px;
-    padding-left: 15px;
-    overflow-x: visible;
-    -webkit-overflow-scrolling: touch;
-    border-top: 1px solid transparent;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1)
-}
+
 
 .navbar-collapse.in {
     overflow-y: auto
@@ -7682,7 +7674,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000/9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
