--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4203,7 +4203,7 @@ fieldset[disabled] .btn-link:hover {
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
-    border-radius: 6px
+    border-radius: 6px;
 }
 
 .btn-group-sm>.btn,
