--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ a:hover {
 }
 
 .menu a:hover{
-    text-decoration: underline #c16b43;
+    text-decoration: underline #aa5a35;
     text-underline-offset: 5px;
 }
 
@@ -815,7 +815,7 @@ h4 {
 }
 
 .black-background {
-    background-color: #c16b43;
+    background-color: #aa5a35;
     padding: 40px 40px 40px 40px;
 }
 
@@ -831,7 +831,7 @@ h4 {
 
 
 .bgc-atomic-tangerine {
-    background-color: #c16b43; 
+    background-color: #aa5a35; 
     display: flex; 
     padding: 10px;
     justify-content: center;
@@ -842,7 +842,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #c16b43;
+    background: #aa5a35;
     color: #FFFFFF!important;
     border: 1px solid #000;
 }
